--- a/ChromaGAN.ipynb
+++ b/ChromaGAN.ipynb
@@ -29,7 +29,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "zA8bcFbU0-VF",
-        "outputId": "e47ec0c0-01a4-412c-f53d-366582d8d1bf",
+        "outputId": "b6a43ece-479c-4f22-e13c-1acd1f4be629",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -52,7 +52,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "CswEHXhU1YDR",
-        "outputId": "7dfeb64d-12b7-4c12-a314-083750a593cc",
+        "outputId": "d83698c4-d094-44e6-f8a5-e4cf85e0f632",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -76,7 +76,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "zaoB1Kbu1iXX",
-        "outputId": "d48119e0-e33c-4ea6-9bf8-bd7272a2d050",
+        "outputId": "cdcd3103-6910-47bb-f69b-8b0f15978b9e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -307,7 +307,7 @@
         "\n",
         "    return gray_image,color_image,VGG16_target    "
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -342,14 +342,14 @@
         "\n",
         "  return model\n"
       ],
-      "execution_count": 6,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "FgukDnq_8Uv0",
-        "outputId": "8ea43c44-30c3-4f8d-cc9b-46050595ed34",
+        "outputId": "76299d3d-5968-4777-a56d-85f1648782aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -359,7 +359,7 @@
         " #for layer in VGG16model.layers:\n",
         "  # layer.trainable = False"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +446,7 @@
         "\n",
         "  return model"
       ],
-      "execution_count": 9,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -462,7 +462,7 @@
         "  model = Model(inputs=X,outputs=[image,color_distribution,output])\n",
         "  return model"
       ],
-      "execution_count": 10,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -486,11 +486,13 @@
         "patch_discriminator = patch_discriminator((224,224,3))\n",
         "patch_discriminator.compile(optimizer=opt,loss='binary_crossentropy',loss_weights=[1])\n",
         "generator = generator((224,224,3))\n",
+        "patch_discriminator.load_weights(\"/content/gdrive/My Drive/ImageColorization /chromaGAN/disc_epoch1_step no.500.h5\")\n",
+        "generator.load_weights(\"/content/gdrive/My Drive/ImageColorization /chromaGAN/gen_epoch1_step no.500.h5\")\n",
         "patch_discriminator.trainable = False\n",
         "chromaGAN = chromaGAN((224,224,3),patch_discriminator,generator)\n",
         "chromaGAN.compile(optimizer=opt,loss=[\"mse\",keras.losses.kullback_leibler_divergence,'binary_crossentropy'],loss_weights=[5,0.003,0.1])"
       ],
-      "execution_count": 11,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -527,7 +529,7 @@
         "  plt.savefig(filename1)\n",
         "  plt.close()"
       ],
-      "execution_count": 12,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -583,7 +585,7 @@
         "        generator.save_weights(filename_gen)\n",
         "\n"
       ],
-      "execution_count": 13,
+      "execution_count": 23,
       "outputs": []
     },
     {
